style: fixed gap animation

--- a/components/Dropdown/styles.module.css
+++ b/components/Dropdown/styles.module.css
@@ -1,7 +1,8 @@
 .container {
   display: grid;
   place-items: center;
-  transition: gap 0.3s ease-out;
+  transition: gap 0.3s ease-in-out;
+  gap: 0.2rem;
 }
 
 .slider {
